hcloud-cluster01/foundryvtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundryvtt
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: foundryvtt
  replicas: 1 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foundryvtt
    spec:
      hostname: foundryvtt
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        fsGroupChangePolicy: Always
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: false
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: foundryvtt
        image: registry.sigurs.io/sigurs/foundryvtt:12.331
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        ports:
          - containerPort: 30000
            name: http
        volumeMounts:
          - mountPath: "/data"
            name: foundryvtt
      volumes:
        - name: foundryvtt
          persistentVolumeClaim:
            claimName: foundryvtt
