hcloud-cluster01/foundryvtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundryvtt
spec:
  ingressClassName: traefik
  rules:
  - host: foundry.sigurs.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foundryvtt
            port:
              name: http
