hcloud-cluster01/foundryvtt/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foundryvtt
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
#  egress: 
#    - to:
#        - namespaceSelector: {}
#          podSelector:
#            matchLabels:
#              k8s-app: kube-dns
#      ports:
#        - port: 53
#          protocol: UDP
#    - to:
#        - ipBlock:
#            cidr: 0.0.0.0/0
